--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 			<!-- logo -->
 			<div class="logo">
-				<a href="#">
+				<a href="http://localhost/csddauolx/trangchu">
 					<!-- <img class="logo-img" src="images/logo2.png" alt="" /> -->
 					<span class="logo-lnk">Ho Trinh Man</span>
 				</a>
