--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 			<!-- logo -->
 			<div class="logo">
-				<a href="http://localhost/csddauolx/trangchu">
+				<a href="#">
 					<!-- <img class="logo-img" src="images/logo2.png" alt="" /> -->
 					<span class="logo-lnk">Ho Trinh Man</span>
 				</a>
@@ -138,7 +138,9 @@
 			<!-- Background -->
 			<div class="background-bg">
 				<div class="background-filter">
-					<div class="background-img" style="background-image: url(images/hinh2.jpg);"></div>
+					<a href="http://localhost/csddauolx/trangchu">
+						<div class="background-img" style="background-image: url(images/hinh2.jpg);"></div>
+					</a>
 				</div>
 			</div>
 
